# homestap-engineering-takehome-thomas-horner

./: .gitignore  LICENSE  README.md  STARTER_TEMPLATE.md
backend/: .env.example  pyproject.toml
backend/backend/: settings.py  urls.py
backend/properties/: tests.py  urls.py  views.py
backend/properties/services/: functions.py  utils.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Error.tsx  PropertyAdditionInformation.tsx  PropertyFeature.tsx  PropertyInformation.tsx  PropertyOverview.tsx
frontend/src/interfaces/: property.ts
frontend/src/services/: property.test.ts  property.ts
